# JudgeArena

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODOs.md  pyproject.toml
.github/workflows/: ci.yml  deploy-space.yml  publish.yml
configs/: alpaca_eval.yaml  alpaca_eval_criteria.yaml  curate-lmarena-multi-block.yaml  elo_comparia.yaml  panel-lmarena-multilingual.yaml  panel-lmarena16.yaml
docs/: lumi-judgearena.md
judgearena/: arenas_utils.py  battles.py  cli.py  cli_common.py  config.py  constants.py  dataset_revisions.py  estimate_elo_ratings.py  eval_utils.py  evaluate.py  generate.py  generate_and_evaluate.py  judge_prompt_presets.py  log.py  models.py  openrouter_reference_pricing.py  paths.py  repro.py  slurm_costs.py  tasks.py  utils.py
judgearena/chat_models/: __init__.py  openrouter_gemini.py
judgearena/criteria/: __init__.py  defaults.py  io.py  schema.py
judgearena/criteria/data/: default.yaml
judgearena/instruction_dataset/: __init__.py  arena_hard.py  m_arenahard.py  mt_bench.py
judgearena/leaderboard/: __init__.py  anchors.py  assemble.py  battles.py  board.py  curate.py  kappa.py  panel.py  pool.py  pool_fit.py  publish.py  record.py  score.py  submit.py
judgearena/mt_bench/: __init__.py  common.py  fastchat_compat.py  mt_bench_utils.py  pairwise_judging.py  preset_judging.py  prompt_templates.py
judgearena/prompts/: __init__.py  prompt-criteria.txt  prompt-with-explanation.txt  prompt.txt  registry.py  skywork-prompt-with-explanation.txt  skywork-prompt.txt  system-prompt.txt
judgearena/prompts/m_arena_hard_v2_localized/ar/: prompt.txt  system-prompt.txt
judgearena/prompts/m_arena_hard_v2_localized/pl/: prompt.txt  system-prompt.txt
judgearena/prompts/m_arena_hard_v2_localized/uk/: prompt.txt  system-prompt.txt
judgearena/prompts/m_arena_hard_v2_localized/zh/: prompt.txt  system-prompt.txt
judgearena/prompts/mt_bench/: system-base.txt  user-multi-reference-block.txt  user-single-reference-block.txt
judgearena/utils/: __init__.py  eval.py  io.py  text.py
openjury/: config.py  eval_utils.py  generate_and_evaluate.py
openjury/mt_bench/: mt_bench_utils.py
scripts/: analyze_lmarena_elo.py  annotate_instruction_quality.py  phase_b_marena_localized_prompt_table.py  phase_b_paper_table.py  phase_b_serial_runner.py
scripts/eval_fluency_norwegian/: eval_fluency.py
scripts/fluency/: generate_fluency.py
scripts/multilingual_arena_hard/: README_translated_AH.md  translate_arena_hard.py
slurmpilot_scripts/: launch_arena_hard_versions_smoke.py  launch_evaluation.py  launch_generation_and_evaluation.py  launch_kislurm_qwen35_smoke.py  launch_mt_bench_smoke.py  launch_phase_b_serial.py
space/: README.md  app.py  render.py  requirements.txt
tests/: test_battles.py  test_chat_vllm.py  test_cli.py  test_config.py  test_criteria.py  test_estimate_elo_ratings.py  test_eval_reports.py  test_generate_and_evaluate.py  test_generate_and_evaluate_arena_hard.py  test_instruction_dataset.py  test_leaderboard.py  test_leaderboard_anchors.py  test_leaderboard_assemble.py  test_leaderboard_battles.py  test_leaderboard_clis.py  test_leaderboard_pool.py  test_leaderboard_pool_fit.py  test_leaderboard_publish.py  test_local_completion_loading.py  test_logging.py  test_models.py  test_mt_bench_downloads.py  test_mt_bench_fastchat_compat.py  test_mt_bench_preset_judging.py  test_openrouter_reference_pricing.py  test_prompt_registry.py  test_regexp.py  test_repro.py  test_seed_plumbing.py  test_slurm_costs.py  test_smoke.py  test_space_render.py  test_strip_thinking_carryover.py  test_utils.py
